[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nepse"
dynamic = ["version"]
authors = [ { name="basic-bgnr"} ]
description = "Unofficial API to interface with https://www.nepalstock.com"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
        "Development Status :: 0.1.0 - Beta",
        "Intended Audience :: Research",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3.8",
    ]
dependencies = [
    "httpx[http2]>=0.27.0",
    "pywasm>=1.0.8",
    "flask>=2.3.2",
    "tqdm>=4.66.2",
]

[project.urls]
Repository = "https://github.com/basic-bgnr/NepseUnofficialApi.git"
Issues = "https://github.com/basic-bgnr/NepseUnofficialApi/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["example*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.wasm"]

[project.scripts]
nepse-cli = "nepse:main_cli"

[tool.setuptools.dynamic]
version = {attr = "nepse.__version__"}
