[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nepse"
dynamic = ["version"]
authors = [ { name="basic-bgnr" } ]
description = "Unofficial API to interface with https://www.nepalstock.com"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
        "Intended Audience :: Research",
        "Operating System :: POSIX :: Linux",
    ]
dependencies = [
    "httpx[http2]==0.27.2",
    "pywasm==1.2.2",
    "flask==3.0.3",
    "tqdm==4.66.5",
]

[project.urls]
Repository = "https://github.com/basic-bgnr/NepseUnofficialApi.git"
Issues = "https://github.com/basic-bgnr/NepseUnofficialApi/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["example*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.wasm"]

[project.scripts]
nepse-cli = "nepse:main_cli"

[tool.setuptools.dynamic]
version = {attr = "nepse.__version__"}

[tool.black]
line-length = 88
target-version = ['py311']
color = true
verbose = true

[tool.isort]
profile = "black"
verbose = true
